# clade_code_project

./: .gitignore  CLAUDE.md  CLAUDE_ISSUE.md  CLAUDE_PROGRESS.md  README.md  TEMPLATE.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/hooks/: README.md  check-claude-md-size.sh
.claude/rules/: context-management.md  security.md
.claude/skills/code-review/: SKILL.md
.claude/skills/debugging/: SKILL.md
.claude/skills/refactoring/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude.yml  template-setup.yml
docs/: architecture.md  usage-guide.md
docs/adr/: 001-modular-architecture.md
docs/runbooks/: incident-response.md
src/: __init__.py  index.test.ts  index.ts
src/api/: CLAUDE.md
src/auth/: CLAUDE.md
src/billing/: CLAUDE.md
tests/: test_main.py
